# smart-sidur

./: README.md  package-lock.json  package.json  pyproject.toml
backend/: auth.py  database.py  main.py  openai_bot.py  prompt.md  server.py  settings.py
src/: App.js  index.js
src/components/: EmployeeCard.js  LoginPage.js  ScheduleTable.js  SmartSidurPage.js
src/features/auth/: authActions.js  authSlice.js
src/styles/: ScheduleTable.css  smartsidur-page.css
